2009-06-26  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Fix some ListBox focus/selection related bugs.
	  Move ComboBox.OnSelectedItemChanged and
	  ListBox.OnSelectedItemChanged to Selector as they have
	  indentical codepaths after the last refactorings.

2009-06-26  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: The items added to the contentpresenter are
	  constrained to be UIElements (FrameworkElements?), not
	  ListBoxItems. Therefore keep a dictionary in ItemsControl to
	  map containers to items so we can correctly call
	  ClearContainerForItemOverride when the item is removed. 

2009-06-25  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: Correctly handle the Reset and Replace
	  events by using AddItemsToPresenter and
	  RemoveItemsFromPresenter.

2009-06-25  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Propagate MaxDropDownHeight to the popup child.

2009-06-25  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Move the handling of the ScrollViewer template
	  element and default values of ScrollbarVisibility to the
	  Selector class so it can be shared between ComboBox and
	  ListBox. Fix some default value issues too.

2009-06-25  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Handle IsDropDownOpenChanged in a non-virtual
	  method.

2009-06-24  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Add another method to selector to allow
	  subclasses to easily set the IsSelected property when the
	  SelectedItem changes.

2009-06-24  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: The only way to get the initial focus correct
	  for the drop down list in ComboBox is if it receives
	  notification of when its ComboBoxItems are loaded.

2009-06-24  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Start implementing the required behaviour to
	  handle key presses.

2009-06-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MultiScaleImage.cs: Use correct event handler type to prevent